--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section>
         <h1>
 <a name="notatki-do-technologii-internetowych" class="anchor" href="#notatki-do-technologii-internetowych"><span class="octicon octicon-link"></span></a>Notatki do Technologii internetowych</h1>
-<p><a href="https://github.com/ilangowska/ti/blob/master/10.05.13.md">notatki 10.05.2013</a></p>
+
 <p></p><blockquote>
 <p><i> dzień bez kodowanoa jest dniem straconym&lt;\i&gt;
 Znaczniki:</i></p>
@@ -53,6 +53,8 @@ Znaczniki:</i></p>
 <li>img</li>
 <li>h</li>
 <li>
+
+<a href="https://github.com/ilangowska/ti/blob/master/10.05.13.md">notatki 10.05.2013</a>
 <code>html
 &lt;!doctype html&gt;
 &lt;html lang=pl&gt;
