--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a name="notatki-do-technologii-internetowych" class="anchor" href="#notatki-do-technologii-internetowych"><span class="octicon octicon-link"></span></a>Notatki do Technologii internetowych</h1>
 
 <p></p><blockquote>
-<p><i> dzień bez kodowanoa jest dniem straconym&lt;\i&gt;
+<p><i> <b>Pierwsze kroki </b><br>dzień bez kodowanoa jest dniem straconym&lt;\i&gt;
 Znaczniki:</i></p>
 
 <ul>
@@ -54,20 +54,6 @@ Znaczniki:</i></p>
 <li>h</li>
 <li>
 
-
-<code>html
-&lt;!doctype html&gt;
-&lt;html lang=pl&gt;
-&lt;head&gt;
-&lt;meta charset=utf-8&gt;
-&lt;title&gt;Szablon strony HTML5&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
-&lt;p&gt;ąćęłńóśźż ĄĆĘŁŃÓŚŹŻ&lt;/p&gt;
-&lt;p&gt;ąćęłńóśźż ĄĆĘŁŃÓŚŹŻ&lt;/p&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-</code>
 "Jak prezydent nie obroni ministra Gowina, to już go nie ma"
 Sikorski: <br>
 --MSZ nie zainterweniuje ws. obrażania Radwańskich
