--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
       <section>
         <h1>
 <a name="notatki-do-technologii-internetowych" class="anchor" href="#notatki-do-technologii-internetowych"><span class="octicon octicon-link"></span></a>Notatki do Technologii internetowych</h1>
-
+<a name="notatki 10.05.2013" class="anchor" href="https://github.com/ilangowska/ti/blob/master/10.05.13.md"><span class="octicon octicon-link"></span></a
+<a href=''  target='_blank'>notatki 10.05.2013</a>
 <p></p><blockquote>
-<p><i> <b>Pierwsze kroki </b><br>dzień bez kodowanoa jest dniem straconym&lt;\i&gt;
+<p><i> dzień bez kodowanoa jest dniem straconym&lt;\i&gt;
 Znaczniki:</i></p>
 
 <ul>
@@ -54,6 +55,20 @@ Znaczniki:</i></p>
 <li>h</li>
 <li>
 
+
+<code>html
+&lt;!doctype html&gt;
+&lt;html lang=pl&gt;
+&lt;head&gt;
+&lt;meta charset=utf-8&gt;
+&lt;title&gt;Szablon strony HTML5&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;p&gt;ąćęłńóśźż ĄĆĘŁŃÓŚŹŻ&lt;/p&gt;
+&lt;p&gt;ąćęłńóśźż ĄĆĘŁŃÓŚŹŻ&lt;/p&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</code>
 "Jak prezydent nie obroni ministra Gowina, to już go nie ma"
 Sikorski: <br>
 --MSZ nie zainterweniuje ws. obrażania Radwańskich
@@ -69,7 +84,7 @@ nowe Prokuratura umorzyła śledztwo w sprawie syna premiera </li>
 <p><img src="http://czasy-prl.za.pl/images/photoalbum/elementarz_0.jpg" alt="alt text">
 fast scrol</p>
 </blockquote>
-<a href='https://github.com/ilangowska/ti/blob/master/10.05.13.md'  target='_blank'>notatki 10.05.2013</a>
+
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/ilangowska">ilangowska</a></p>
